# bqa

./: .gitignore  Dockerfile  Dockerfile.gpu  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
benchmarks_against_mqlib/: plot_energy_stat.py  random_10_regular_maxcut_1000.py  random_3_regular_maxcut.py  random_3_regular_maxcut_1000.py  random_3_regular_maxcut_10000.py  random_3_regular_qubo_1000.py  random_3_regular_qubo_10000.py  random_3_regular_qubo_100000.py  random_3_regular_qubo_500000.py  random_3_regular_random_fields_random_interactions.py  utils.py
examples/: 2d_greed.py  full_size_ibm_heavy_hex.py  random_regular.py  small_ibm_heavy_hex.py  utils.py
examples/cli_examples/: README.md  cli_runner.py  json_generator.py  small_ibm_heavy_hex.json
src/bqa/: __init__.py  backends.py  benchmarking.py  cli.py  cli_utils.py  context.py  core.py  cutensordot.py  exact_sim.py  simulator.py  state.py  utils.py
src/bqa/config/: compile_config.py  config_canonicalization.py  config_syntax.py  core.py  desugar_config.py  metrics.py  pipeline.py  schedule_canonicalization.py  schedule_syntax.py  sparsification.py  sparsify_config.py  utils.py  validate_config.py
src/bqa/config_syntax/: config_syntax.py  schedule_syntax.py  utils.py
tests/: exact_sim.py  test_claude_generated_desugar_config.py  test_claude_generated_validate_config.py  test_config_to_context.py  test_core_subroutines.py  test_gpt_generated_gates_application.py  test_gpt_generated_npbackend.py  test_pipes_do_not_fail.sh  test_small_circuit_final_density.py
