[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "bqa"
version = "0.1.2"
description = "A framework for tensor-network–based quantum annealing simulation powered by belief propagation."
authors = ["Ilia-Luchnikov <luchnikovilya@gmail.com>"]
readme = "README.md"
packages = [{include = "bqa", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
numpy = "^2.0.0"
networkx = "^3.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.4.2"
qem = { git = "https://github.com/LuchnikovI/qem", rev = "8156bfd" }
